@@ -1,4 +1,4 @@
 DIST cgnslib_2.5-2.tar.gz 390011 RMD160 9ef07fd8ebcebb74ab9a3cc39303fe2e3b722b7e SHA1 b1b5a8e9f73f12c04e5ebda92f9d6e8a347ecf30 SHA256 5e12a8042f1564a0d16f5eebecc79508684de68e0ba192cf44217e075d41de2c
-EBUILD cgnslib-2.5.2.ebuild 1385 RMD160 e2680f85634b8ff17e94e837c75552220ba02f3e SHA1 4293b9ada18ed4a2b35f672ef64ffd5b4b34dc5f SHA256 24e1824b3030487e4ad152865c7e8a49aa4e11a0925c78f012934ee5ce5c4d6e
-MISC ChangeLog 377 RMD160 559892c821fed97ee3167405b5c39510fba612d3 SHA1 fca86b91e3ed6c5b6bedec2445b838347b69c497 SHA256 67cc03530aaaaaae9230aeaf94cbac78ff9cdc5e01e5d0f0ecf2e01a45f25e0c
+EBUILD cgnslib-2.5.2.ebuild 1565 RMD160 9853773c9c34273b1aef9f7d64de5d73aea5a217 SHA1 0f2bdfbed1c8da6e161c781a83817038a5b19e62 SHA256 cf40d39fdc5cde4f949a61f4612adc5d4e61310f3caa6419dc48e82f51321dcb
+MISC ChangeLog 520 RMD160 366e3b7a1699a1da27bd99e273a6bf26e985fe6c SHA1 2471c17cb1abb03483d79bb5270047f814706962 SHA256 1b4fc2c3f54ecf6a9eee5a505284393330c4b54ff2aa2a03e790c9e4312f1de2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
